# real-closed

./: .gitignore  .travis.yml  AUTHORS  README.md  _CoqProject  config.nix  coq-mathcomp-real-closed.opam  default.nix  dune  dune-project  index.md  meta.yml  opam  package.nix  rocq-mathcomp-real-closed.opam  shell.nix
.github/workflows/: coq-action.yml  docker-action.yml  nix-action-8.14.yml  nix-action-8.15.yml  nix-action-8.16.yml  nix-action-8.17.yml  nix-action-8.18.yml  nix-action-8.19.yml  nix-action-8.20.yml  nix-action-9.0.yml  nix-action-9.1.yml  nix-action-master.yml
.nix/: config.nix  coq-nix-toolbox.nix  nixpkgs.nix
theories/: all_real_closed.v  cauchyreals.v  complex.v  mxtens.v  ordered_qelim.v  polyorder.v  polyrcf.v  qe_rcf.v  qe_rcf_th.v  realalg.v  table.v
